recondicion del titulo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git y Github por Alura </title>
+    <title>Git y Github por Alura & oracle </title>
 </head>
 
 <body style="background:linear-gradient(45deg,#3fa5c1, #df9723) ">
